# pokedex

./: .gitignore  Dockerfile  manage.py  pyproject.toml
config/: __init__.py  bulbasaur.json  dummy_pokemon.json
pokedex/: admin.py  forms.py  models.py  serializer.py  tests.py  urls.py  utils.py  views.py
pokedex/migrations/: 0001_initial.py  0002_trainer.py  0003_team_delete_trainer.py  0004_alter_team_pokemon_2_alter_team_pokemon_3_and_more.py
pokedex/static/pokedex/: style.css
pokedex/templates/: index.html
users/: forms.py  models.py  serializer.py  urls.py  views.py
users/migrations/: 0001_initial.py
wisemen/: asgi.py  settings.py  urls.py  wsgi.py
